[package]
name = "lightstreamer-client"
version = "0.1.11"
edition = "2021"
authors = ["Daniel López Azaña <daniloaz@gmail.com>"]
description = "A Rust client for Lightstreamer, designed to facilitate real-time communication with Lightstreamer servers."
license = "GPL-3.0-only"
repository = "https://github.com/daniloaz/lightstreamer-client"
documentation = "https://github.com/daniloaz/lightstreamer-client#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3"
cookie = { version = "0", features = ["percent-encode"]}
futures-util = "0"
json-patch = "4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_urlencoded = "0"
signal-hook = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
tracing = "0.1.40"
url = "2"
