[package]
name = "lightstreamer-client"
version = "0.1.11"
edition = "2021"
authors = ["Daniel López Azaña <daniloaz@gmail.com>"]
description = "A Rust client for Lightstreamer, designed to facilitate real-time communication with Lightstreamer servers."
license = "GPL-3.0-only"
repository = "https://github.com/daniloaz/lightstreamer-client"
documentation = "https://github.com/daniloaz/lightstreamer-client#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1"
cookie = { version = "0.18", features = ["percent-encode"]}
futures-util = "0.3"
json-patch = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
signal-hook = "0.3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5"
